# UAS_MachineLearning_Robotics

./: .gitignore  01_one-neuron.ipynb  02-network.ipynb  03-tinygrad.ipynb  05-symbolic-network.ipynb  06-comparison.ipynb  06-linear.ipynb  06b-linear.ipynb  07-offset-no-bias.ipynb  07-offset.ipynb  07b-offset.ipynb  08-nonlinear.ipynb  08b-nonlinear.ipynb  08c-nonlinear.ipynb  09-tinygrad-gpu.ipynb  10-presentation.ipynb  11 - results.ipynb  JAX_test.ipynb  pyproject.toml
lib/: __init__.py  activation.py  caching.py  loss.py  net_types.py  training.py
matlab_sample_code/: withStudents.m  withStudentsNew.m  withStudentsNew2.m
