[project]
name = "uas_ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "networkx>=3.6.1",
    "numpy>=2.3.3",
    "plotly>=6.5.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
