[project]
name = "uas_ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
 dependencies = [
    "jax>=0.8.2",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "networkx>=3.6.1",
    "numpy>=2.3.3",
    "plotly>=6.5.0",
    "sympy>=1.13.0",
    "tinygrad>=0.11.0",
 ]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ty>=0.0.3",
]
